testsuite/tests/package/package01e.stderr

package01e.hs:2:1: error:
    Could not load module ‘Data.Map’
    It is a member of the hidden package ‘containers-0.6.0.1’.
    You can run ‘:set -package containers’ to expose it.
    (Note: this unloads all the modules in the current scope.)
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.

package01e.hs:3:1: error:
    Could not load module ‘Data.IntMap’
    It is a member of the hidden package ‘containers-0.6.0.1’.
    You can run ‘:set -package containers’ to expose it.
    (Note: this unloads all the modules in the current scope.)
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
